WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269700
RealtimeMediaSource error logging is wrong for zoom and frame rate constraints
https://bugs.webkit.org/show_bug.cgi?id=269700
Summary
RealtimeMediaSource error logging is wrong for zoom and frame rate constraints
youenn fablet
Reported
2024-02-19 04:24:03 PST
RealtimeMediaSource error logging is wrong for zoom and frame rate constraints
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-19 04:24:26 PST
<
rdar://problem/123230206
>
youenn fablet
Comment 2
2024-02-19 04:24:47 PST
<
rdar://121949844
>
youenn fablet
Comment 3
2024-02-19 04:34:39 PST
<
rdar://problem/123230206
>
youenn fablet
Comment 4
2024-02-19 04:34:50 PST
https://github.com/WebKit/WebKit/pull/24737
EWS
Comment 5
2024-02-20 05:46:12 PST
Committed
275036@main
(5f7adde53ff6): <
https://commits.webkit.org/275036@main
> Reviewed commits have been landed. Closing PR #24737 and removing active labels.
youenn fablet
Comment 6
2024-03-12 01:31:47 PDT
***
Bug 270777
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug