RealtimeMediaSource error logging is wrong for zoom and frame rate constraints rdar://121949844 https://bugs.webkit.org/show_bug.cgi?id=269700

Reviewed by Eric Carlson.

Debug ASSERTs were changed into RELEASE_ASSERT in https://github.com/WebKit/WebKit/commit/f685afa11acafdf44fd60af91b837cb1f3bf85f9.
But these asserts are hit since our loggings are mistakenly calling longRange() for double constraints.
Update our logging code to use double constraints and add corresponding tests.
We downgrade the two RELEASE_ASSERT to ASSERT like it was the case before https://github.com/WebKit/WebKit/commit/f685afa11acafdf44fd60af91b837cb1f3bf85f9.
A future patch should further refactor this code to remove these ASSERTS.

* LayoutTests/fast/mediastream/applyConstraints-bad-constraints-expected.txt: Added.
* LayoutTests/fast/mediastream/applyConstraints-bad-constraints.html: Added.
* Source/WebCore/platform/mediastream/RealtimeMediaSource.cpp:
(WebCore::RealtimeMediaSource::hasInvalidSizeFrameRateAndZoomConstraints):

Canonical link: https://commits.webkit.org/275036@main